# kain_logical_clocks

./: .gitignore  README.md  meson.build  meson_options.txt
doc/: main.aux  main.out  main.tex  main.toc
include/: lamport_clock.h
src/: lamport_clock.cpp  main.cpp
